[package]
name = "diffilate"
version = "0.5.1"
edition = "2021"
authors = ["arsenius_gen <arsenius.gen@proton.me>"]
description = "Saves diffirence between files in optimized way"
license = "MIT"
repository = "https://github.com/ArsenijN/diffilate"  # Replace with your actual repository URL
